Development with the Force.com Platform (3rd Edition)/src/objects/Timecard__c.object
<CustomObject>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, hours in this timecard are billable</description>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <description>Hours worked on Friday</description>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Date timecard was invoiced</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice number associated with this timecard</description>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this timecard has been invoiced</description>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <description>Hours worked on Monday</description>
        <label>Monday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any comments on the timecard, entered by the consultant</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <description>Hours worked on Saturday</description>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this timecard</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <description>Hours worked on Sunday</description>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <description>Hours worked on Thursday</description>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Total number of hours worked this week, equal to the sum of the individual hours columns (Sunday to Saturday)</description>
        <formula>Sunday_Hours__c + Monday_Hours__c + Tuesday_Hours__c + Wednesday_Hours__c + Thursday_Hours__c + Friday_Hours__c + Saturday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <description>Hours worked on Tuesday</description>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <description>Hours worked on Wednesday</description>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <description>Last day in the week recorded by this Timecard (a Saturday)</description>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <label>Timecard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{MMDDYYYY}-{00000}</displayFormat>
        <label>Timecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>